farmer update, PUT and Patch
